--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  permission_handler: ^5.1.0+2
+  flutter_contact: ^0.6.5+1
+  sqflite: ^1.3.2+3
+  path: ^1.8.0-nullsafety.1
+  stacked: ^1.9.1+2
+  stacked_services: ^0.7.2
+
+  # flutter pub run build_runner build --delete-conflicting-outputs
+  # dependency injection
+  get_it: ^5.0.6
+  injectable: ^1.1.0
+
+  # navigation
+  get: ^3.25.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  injectable_generator: ^1.0.5
+  stacked_generator: ^0.1.2
+  build_runner: ^1.10.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
