--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,27 +27,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  permission_handler: ^5.1.0+2
-  flutter_contact: ^0.6.5+1
-  sqflite: ^1.3.2+3
-  path: ^1.8.0-nullsafety.1
-  stacked: ^1.9.1+2
+  cupertino_icons: ^1.0.2
+  contacts: ^1.0.0
+  permission_handler: ^6.0.1
+  stacked: ^1.9.5
   stacked_services: ^0.7.2
+  sqfly: ^1.0.0-alpha.1
 
   # flutter pub run build_runner build --delete-conflicting-outputs
-  # dependency injection
-  get_it: ^5.0.6
-  injectable: ^1.1.0
-  sqflite_migration_service: ^1.0.4
-  get: ^3.25.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  injectable_generator: ^1.0.5
-  stacked_generator: ^0.1.2
-  build_runner: ^1.10.2
+  stacked_generator: ^0.2.4
+  build_runner: ^1.11.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,8 +54,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/sql/
+  #assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
