--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,8 @@
 *.iml
 *.ipr
 *.iws
-*.idea
-!my_notebook.iml
-!.idea/modules.xml
+.idea/
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -31,7 +30,7 @@
 .pub-cache/
 .pub/
 /build/
-!.apk
+
 # Web related
 lib/generated_plugin_registrant.dart
 
@@ -40,3 +39,11 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
+
+!my_notebook.iml
+!android/my_notebook_android.iml
